# cli_wight

./: .env  .gitignore  README.md  database.db  pyproject.toml
alembic/: env.py
alembic/versions/: 733e86c645e8_add_difference_to_user.py
src/: crud.py  main.py  parser_args.py
src/cli/: commands.py  handlers.py  ui.py
src/db/: crud.py  db.py
src/models/: models.py
src/ui/: table_info.py
